fix: [Authenticated landing] Adjust spacing

--- a/src/pages/AuthenticatedLanding/Landing.less
+++ b/src/pages/AuthenticatedLanding/Landing.less
@@ -22,11 +22,11 @@
     margin-top: 2em;
 
     .cf-icon-svg {
-      margin-right: 0.5em;
+      margin-right: 5px;
     }
 
     .status-label {
-      margin-right: 0.7em;
+      margin-right: 10px;
       font-weight: 500;
     }
   }
